--- a/sllm_store/tests/cpp/CMakeLists.txt
+++ b/sllm_store/tests/cpp/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Find GTest
 FetchContent_Declare(
     googletest
-    GIT_REPOSITORY https://github.com/google/googletest.git
+    GIT_REPOSITORY git@github.com:google/googletest.git
     GIT_TAG        v1.13.0
 )
 FetchContent_MakeAvailable(googletest)
